force-app/main/default/objects/AssessmentTemplateSection__c/AssessmentTemplateSection__c.object-meta.xml
<CustomObject>
    <label>Assessment Template Section</label>
    <nameField>
        <label>Assessment Template Section Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>