force-app/main/default/objects/AssessmentTemplateSection__c/fields/AssessmentTemplate__c.field-meta.xml
<CustomField>
    <fullName>AssessmentTemplate__c</fullName>
    <label>Assessment Template</label>
    <referenceTo>AssessmentTemplate__c</referenceTo>
    <relationshipLabel>Assessment Template Section</relationshipLabel>
    <relationshipName>Assessment_Template_Section</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>