force-app/main/default/objects/AssessmentTemplateSection__c/fields/SectionNumber__c.field-meta.xml
<CustomField>
    <fullName>SectionNumber__c</fullName>
    <displayFormat>{0}</displayFormat>
    <label>Section Number</label>
    <type>AutoNumber</type>
</CustomField>